k8s/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkjs-app
  namespace: mkjs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mkjs-app
  template:
    metadata:
      labels:
        app: mkjs-app
    spec:
      containers:
      - name: mkjs-app
        image: mkjs-app:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mkjs-app-service
  namespace: mkjs
spec:
  selector:
    app: mkjs-app
  ports:
  - port: 3000
    targetPort: 3000
