k8s/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkjs-db
  namespace: mkjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mkjs-db
  template:
    metadata:
      labels:
        app: mkjs-db
    spec:
      containers:
      - name: mkjs-db
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: mkjs
spec:
  selector:
    app: mkjs-db
  ports:
  - port: 5432
    targetPort: 5432
