k8s/deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkjs-nginx
  namespace: mkjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mkjs-nginx
  template:
    metadata:
      labels:
        app: mkjs-nginx
    spec:
      containers:
      - name: mkjs-nginx
        image: mkjs-nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mkjs-nginx-service
  namespace: mkjs
spec:
  selector:
    app: mkjs-nginx
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
